<?xml version="1.0"?>
<package format="2">
  <name>moveit_gazebo_demo</name>
  <version>0.0.0</version>
  <description>The moveit_gazebo_demo package</description>

  <maintainer email="ipa-hsd@todo.todo">ipa-hsd</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ur_kinematics</build_depend>
  <build_depend>ur_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>ur_gazebo</exec_depend>
  <exec_depend>ur_kinematics</exec_depend>
  <exec_depend>ur5_moveit_config</exec_depend>
  <exec_depend>ur_msgs</exec_depend>

  <export>
  </export>
</package>
